--- a/views/admin/pages/account/garbage.view.ejs
+++ b/views/admin/pages/account/garbage.view.ejs
@@ -16,8 +16,10 @@
     />
 
     <!-- Style File -->
-    <link rel="stylesheet" href="/setup.css" />
-    <link rel="stylesheet" href="/admin/styles/style.css" />
+    <link rel="stylesheet" href="/admin/setup.css" />
+    <link rel="stylesheet" href="/admin/styles/partials/alert.css" />
+    <link rel="stylesheet" href="/admin/styles/partials/header.css" />
+    <link rel="stylesheet" href="/admin/styles/partials/sider.css" />
   </head>
   <body>
     <%-include("../../partials/header.view.ejs") %>
@@ -27,17 +29,16 @@
       <div class="main">
         <%-include("../../partials/alertMessage.view.ejs") %> <%
         if(roleAuth.permission.includes("account-view")) { %>
-        <h1><%= pageTitle %></h1>
+        <h1 class="heading-font text-primary py-0 text-start"><%= pageTitle %></h1>
         <div class="card mb-3">
-          <div class="card-header">Danh sách tài khoản đã xóa</div>
+          <div class="title-font card-header">Danh sách tài khoản đã xóa</div>
           <div class="card-body">
-            <div class="container-fluid">
+            <div class="container-fluid mb-2">
               <div class="row">
-                <div class="col-8">
+                <div class="col-lg-5 col-12">
                   <%-include("../../partials/changeMulti.view.ejs", {url: 'accounts', type:
                   'account'}) %>
                 </div>
-                <div class="col-4"></div>
               </div>
             </div>
 
@@ -50,7 +51,7 @@
                   </div>
                   <% } %>
                   <table class="table table-hover table-sm">
-                    <thead>
+                    <thead class="content-font">
                       <th class="bg-primary-subtle text-primary text-decoration-underline">
                         <input type="checkbox" name="checkall" class="me-5" />STT
                       </th>
@@ -74,7 +75,7 @@
                       <% } %>
                     </thead>
 
-                    <tbody>
+                    <tbody class="content-font">
                       <% accountList.forEach((account, index) => { %>
                       <tr title="<%= account.title %>">
                         <td>
@@ -102,7 +103,8 @@
                             data-id="<%= account._id %>"
                             data-status="active"
                             change-status
-                            class="badge text-bg-success"
+                            class="badge"
+                            style="background: var(--success-color-admin)"
                             >Hoạt động</a
                           >
                           <% } else {%>
@@ -111,7 +113,8 @@
                             data-id="<%= account._id %>"
                             data-status="inactive"
                             change-status
-                            class="badge text-bg-warning"
+                            class="badge"
+                            style="background: var(--warning-color-admin)"
                             >Ngừng hoạt động</a
                           >
                           <% } %>
@@ -161,6 +164,9 @@
     </div>
 
     <!-- Script File -->
+    <script src="/admin/scripts/showAlert.js"></script>
+    <script src="/admin/scripts/sidebarToggle.js"></script>
+    <script src="/admin/scripts/activeSidebarLink.js"></script>
     <script src="/admin/scripts/deleteGarbage.js"></script>
     <script src="/admin/scripts/restoreGarbage.js"></script>
     <script src="/admin/scripts/changeMulti.js"></script>
