--- a/views/admin/pages/product/product.view.ejs
+++ b/views/admin/pages/product/product.view.ejs
@@ -15,8 +15,10 @@
     />
 
     <!-- Style File -->
-    <link rel="stylesheet" href="/setup.css" />
-    <link rel="stylesheet" href="/admin/styles/style.css" />
+    <link rel="stylesheet" href="/admin/setup.css" />
+    <link rel="stylesheet" href="/admin/styles/partials/alert.css" />
+    <link rel="stylesheet" href="/admin/styles/partials/header.css" />
+    <link rel="stylesheet" href="/admin/styles/partials/sider.css" />
   </head>
   <body>
     <%-include("../../partials/header.view.ejs") %>
@@ -26,21 +28,20 @@
       <div class="main">
         <%-include("../../partials/alertMessage.view.ejs") %> <%
         if(roleAuth.permission.includes('product-view')) {%>
-        <div class="row">
-          <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
-            <h1><%= pageTitle %></h1>
+        <div class="row gap-md-0 gap-2 justify-content-between">
+          <div class="col-lg-8 col-md-4 col-12">
+            <h1 class="heading-font text-primary py-0 text-start"><%= pageTitle %></h1>
           </div>
-          <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12"></div>
-          <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
+          <div class="col-lg-4 col-md-6 col-12">
             <%-include("../../partials/search.view.ejs") %>
           </div>
         </div>
 
         <div class="card mb-3">
-          <div class="card-header">Bộ lọc</div>
+          <div class="title-font card-header">Bộ lọc</div>
           <div class="card-body">
             <div class="container-fluid">
-              <div class="row">
+              <div class="row gap-md-0 gap-2">
                 <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-3 col-sm-12 col-12">
                   <%-include("../../partials/statusFilter.view.ejs") %>
                 </div>
@@ -55,21 +56,23 @@
           </div>
         </div>
         <div class="card mb-3">
-          <div class="card-header">
+          <div class="title-font card-header">
             Danh sách (trang hiện tại: <%= objPagination.currentPage %>)
           </div>
           <div class="card-body">
-            <div class="container-fluid">
-              <div class="row">
-                <div class="col-4">
+            <div class="container-fluid p-2 p-md-2">
+              <div class="row gap-md-0 gap-2">
+                <div class="col-lg-4 col-12">
                   <%-include("../../partials/changeMulti.view.ejs", {url: 'products', type:
                   'product'}) %>
                 </div>
-                <div class="col-4"><%-include("../../partials/sort.view.ejs") %></div>
-                <div class="col-2"></div>
-                <div class="col-2">
+                <div class="col-lg-4 col-12"><%-include("../../partials/sort.view.ejs") %></div>
+                <div class="col-lg-4 col-12">
                   <% if(roleAuth.permission.includes('product-add')) {%>
-                  <a href="<%= prefixAdmin %>/products/create" class="btn btn-primary float-end">
+                  <a
+                    href="<%= prefixAdmin %>/products/create"
+                    class="btn btn-primary w-100 float-end"
+                  >
                     <i class="bi bi-plus-lg me-1"></i>Thêm mới sản phẩm
                   </a>
                   <% } %>
@@ -86,7 +89,7 @@
                   </div>
                   <% } %>
                   <table class="table table-hover table-sm w-100">
-                    <thead>
+                    <thead class="content-font">
                       <th class="bg-primary-subtle text-primary text-decoration-underline">
                         <input type="checkbox" name="checkall" class="me-5" />STT
                       </th>
@@ -116,7 +119,7 @@
                       </th>
                     </thead>
 
-                    <tbody>
+                    <tbody class="content-font">
                       <% productList.forEach((item, index) => { %>
                       <tr title="<%= item.title %>">
                         <td>
@@ -133,13 +136,13 @@
                         </td>
                         <td><%= item.title %></td>
                         <td>
-                          <b class="text-danger"
+                          <b style="color: var(--error-color-admin)"
                             ><i
                               ><%= new Intl.NumberFormat('vi-VN', { style: 'currency', currency:
                               'VND' }).format(Number.parseFloat(item.price - (item.price / 100 *
                               item.discount))) %></i
-                            ></b
-                          >
+                            >
+                          </b>
                           | Giá gốc: <%= new Intl.NumberFormat('vi-VN', { style: 'currency',
                           currency: 'VND' }).format(item.price) %>
                         </td>
@@ -169,7 +172,8 @@
                             data-id="<%= item._id %>"
                             data-status="active"
                             change-status
-                            class="badge text-bg-success"
+                            class="badge"
+                            style="background: var(--success-color-admin)"
                             >Hoạt động</a
                           >
                           <% } else {%>
@@ -178,7 +182,8 @@
                             data-id="<%= item._id %>"
                             data-status="inactive"
                             change-status
-                            class="badge text-bg-warning"
+                            class="badge"
+                            style="background: var(--warning-color-admin)"
                             >Ngừng hoạt động</a
                           >
                           <% } %>
@@ -226,20 +231,13 @@
           </div>
         </div>
 
-        <form
-          action="<%= prefixAdmin %>/products"
-          method="POST"
-          class="d-none"
-          form-change-status
-        ></form>
-
-        <form action="<%= prefixAdmin %>/products" method="POST" class="d-none" form-delete></form>
-
         <div class="container-fluid">
           <div class="row">
-            <div class="col-9"><%-include("../../partials/pagination.view.ejs") %></div>
-            <div class="col-3">
-              <a href="<%= prefixAdmin %>/products/garbage" class="btn btn-primary float-end"
+            <div class="col-lg-9 col-md-9 col-12">
+              <%-include("../../partials/pagination.view.ejs") %>
+            </div>
+            <div class="col-lg-3 col-md-3 col-12">
+              <a href="<%= prefixAdmin %>/products/garbage" class="btn btn-primary w-100 float-end"
                 ><i class="bi bi-trash me-2"></i>Thùng rác</a
               >
             </div>
@@ -249,7 +247,18 @@
       <% } %>
     </div>
 
+    <form
+      action="<%= prefixAdmin %>/products"
+      method="POST"
+      class="d-none"
+      form-change-status
+    ></form>
+
+    <form action="<%= prefixAdmin %>/products" method="POST" class="d-none" form-delete></form>
+
     <!-- Script File -->
+    <script src="/admin/scripts/sidebarToggle.js"></script>
+    <script src="/admin/scripts/activeSidebarLink.js"></script>
     <script src="/admin/scripts/statusFilter.js"></script>
     <script src="/admin/scripts/product/search.js"></script>
     <script src="/admin/scripts/pagination.js"></script>
