--- a/views/admin/partials/sort.view.ejs
+++ b/views/admin/partials/sort.view.ejs
@@ -1,5 +1,5 @@
 <form class="d-flex" id="sort">
-  <select name="sort" class="form-control w-75 sort-select">
+  <select name="sort" class="form-control w-75 flex-fill sort-select">
     <option value="" disabled>-- Danh mục sắp xếp --</option>
     <option class="sort-option" value="position-desc" <% if(sortValue === "position-desc") {%>selected<% } %>>Vị trí giảm dần ⬇</option>
     <option class="sort-option" value="position-asc" <% if(sortValue === "position-asc") {%>selected<% } %>>Vị trí tăng dần ⬆</option>
