--- a/views/admin/pages/account/create.view.ejs
+++ b/views/admin/pages/account/create.view.ejs
@@ -16,8 +16,10 @@
     />
 
     <!-- Style File -->
-    <link rel="stylesheet" href="/setup.css" />
-    <link rel="stylesheet" href="/admin/styles/style.css" />
+    <link rel="stylesheet" href="/admin/setup.css" />
+    <link rel="stylesheet" href="/admin/styles/partials/alert.css" />
+    <link rel="stylesheet" href="/admin/styles/partials/header.css" />
+    <link rel="stylesheet" href="/admin/styles/partials/sider.css" />
   </head>
   <body>
     <%-include("../../partials/header.view.ejs") %>
@@ -27,7 +29,7 @@
       <div class="main">
         <%-include("../../partials/alertMessage.view.ejs") %> <%
         if(roleAuth.permission.includes("account-add")) { %>
-        <h1><%= pageTitle %></h1>
+        <h1 class="heading-font text-primary py-0 text-start"><%= pageTitle %></h1>
         <% if (roleList.length === 0) {%>
         <div class="text-center text-white bg-danger p-2">
           Cần có nhóm quyền mới vào đc trang này
@@ -43,7 +45,7 @@
             <div class="row">
               <div class="col-12">
                 <div class="form-group mb-4">
-                  <label for="fullName"
+                  <label for="fullName" class="fw-bold"
                     ><span class="text-danger"><b>*</b></span> Họ & Tên</label
                   >
                   <input type="text" name="fullName" required id="fullName" class="form-control" />
@@ -51,7 +53,7 @@
               </div>
               <div class="col-6 mb-4">
                 <div class="form-group">
-                  <label for="email"
+                  <label for="email" class="fw-bold"
                     ><span class="text-danger"><b>*</b></span> Địa chỉ email</label
                   >
                   <input type="email" name="email" required id="email" class="form-control" />
@@ -59,7 +61,7 @@
               </div>
               <div class="col-6">
                 <div class="form-group mb-4">
-                  <label for="password"
+                  <label for="password" class="fw-bold"
                     ><span class="text-danger"><b>*</b></span> Mật khẩu</label
                   >
                   <input
@@ -79,7 +81,7 @@
               </div>
               <div class="col-6">
                 <div class="form-group mb-4">
-                  <label for="phone"
+                  <label for="phone" class="fw-bold"
                     ><span class="text-danger"><b>*</b></span> Số điện thoại</label
                   >
                   <input type="phone" name="phone" required id="phone" class="form-control" />
@@ -87,7 +89,7 @@
               </div>
               <div class="col-6">
                 <div class="form-group mb-4">
-                  <label for="avatar">Ảnh đại diện</label>
+                  <label for="avatar" class="fw-bold">Ảnh đại diện</label>
                   <input
                     type="file"
                     name="avatar"
@@ -101,7 +103,7 @@
               </div>
               <div class="col-6">
                 <div class="form-group mb-4">
-                  <label for="birthDay"
+                  <label for="birthDay" class="fw-bold"
                     ><span class="text-danger"><b>*</b></span> Ngày sinh</label
                   >
                   <input type="date" name="birthDay" id="birthDay" class="form-control" />
@@ -109,7 +111,7 @@
               </div>
               <div class="col-6">
                 <div class="form-group mb-4">
-                  <label for="roleId"
+                  <label for="roleId" class="fw-bold"
                     ><span class="text-danger"><b>*</b></span> Phân quyền</label
                   >
                   <select name="roleId" id="roleId" class="form-control">
@@ -122,7 +124,7 @@
               </div>
               <div class="col-12">
                 <div class="form-group mb-4">
-                  <label for="status"
+                  <label for="status" class="fw-bold"
                     ><span class="text-danger"><b>*</b></span> Trạng thái</label
                   >
                   <select name="status" id="status" class="form-control">
@@ -143,8 +145,10 @@
     </div>
 
     <!-- Script File -->
-    <script src="/admin/scripts/previewImage.js"></script>
     <script src="/admin/scripts/showAlert.js"></script>
+    <script src="/admin/scripts/sidebarToggle.js"></script>
+    <script src="/admin/scripts/activeSidebarLink.js"></script>
+    <script src="/admin/scripts/previewImage.js"></script>
     <script src="/admin/scripts/toggleAccountInfo.js"></script>
 
     <!-- Script Library & Framwork -->
