--- a/views/admin/pages/category/category.view.ejs
+++ b/views/admin/pages/category/category.view.ejs
@@ -16,8 +16,10 @@
     />
 
     <!-- Style File -->
-    <link rel="stylesheet" href="/setup.css" />
-    <link rel="stylesheet" href="/admin/styles/style.css" />
+    <link rel="stylesheet" href="/admin/setup.css" />
+    <link rel="stylesheet" href="/admin/styles/partials/alert.css" />
+    <link rel="stylesheet" href="/admin/styles/partials/header.css" />
+    <link rel="stylesheet" href="/admin/styles/partials/sider.css" />
   </head>
   <body>
     <%-include("../../partials/header.view.ejs") %>
@@ -27,9 +29,9 @@
       <div class="main">
         <%-include("../../partials/alertMessage.view.ejs") %> <%
         if(roleAuth.permission.includes('category-view')) { %>
-        <div class="row">
+        <div class="row gap-md-0 gap-2">
           <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
-            <h1><%= pageTitle %></h1>
+            <h1 class="heading-font text-primary py-0 text-start"><%= pageTitle %></h1>
           </div>
           <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12"></div>
           <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
@@ -38,36 +40,35 @@
         </div>
 
         <div class="card mb-3">
-          <div class="card-header">Bộ lọc</div>
+          <div class="title-font card-header">Bộ lọc</div>
           <div class="card-body">
             <div class="container-fluid">
-              <div class="row">
+              <div class="row gap-md-0 gap-2">
                 <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-3 col-sm-12 col-12">
                   <%-include("../../partials/statusFilter.view.ejs") %>
                 </div>
-                <div class="col-xxl-5 col-xl-5 col-lg-5 col-md-5 col-sm-12 col-12"></div>
-                <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12"></div>
               </div>
             </div>
           </div>
         </div>
 
         <div class="card mb-3">
-          <div class="card-header">
+          <div class="title-font card-header">
             Danh sách (trang hiện tại: <%= objPagination.currentPage %>)
           </div>
           <div class="card-body">
-            <div class="container-fluid">
-              <div class="row">
-                <div class="col-4">
+            <div class="container-fluid p-2 p-md-2">
+              <div class="row gap-lg-0 gap-2 justify-content-between">
+                <div class="col-lg-4 col-12">
                   <%-include("../../partials/changeMulti.view.ejs", {url: 'categories', type:
                   'category'}) %>
                 </div>
-                <div class="col-4"></div>
-                <div class="col-2"></div>
-                <div class="col-2">
+                <div class="col-lg-4 col-12">
                   <% if(roleAuth.permission.includes('category-add')) { %>
-                  <a href="<%= prefixAdmin %>/categories/create" class="btn btn-primary float-end">
+                  <a
+                    href="<%= prefixAdmin %>/categories/create"
+                    class="btn btn-primary w-100 float-end"
+                  >
                     <i class="bi bi-plus-lg me-1"></i>Thêm mới danh mục
                   </a>
                   <% } %>
@@ -84,7 +85,7 @@
                   </div>
                   <% } %>
                   <table class="table table-hover table-sm">
-                    <thead>
+                    <thead class="content-font">
                       <th class="bg-primary-subtle text-primary text-decoration-underline">
                         <input type="checkbox" name="checkall" class="me-5" />STT
                       </th>
@@ -110,7 +111,7 @@
                       <% } %>
                     </thead>
 
-                    <tbody>
+                    <tbody class="content-font">
                       <% categoryList.forEach((item, index) => { %>
                       <tr title="<%= item.title %>">
                         <td>
@@ -134,7 +135,8 @@
                             data-id="<%= item._id %>"
                             data-status="active"
                             change-status
-                            class="badge text-bg-success"
+                            class="badge"
+                            style="background: var(--success-color-admin)"
                             >Hoạt động</a
                           >
                           <% } else {%>
@@ -143,7 +145,8 @@
                             data-id="<%= item._id %>"
                             data-status="inactive"
                             change-status
-                            class="badge text-bg-warning"
+                            class="badge"
+                            style="background: var(--warning-color-admin)"
                             >Ngừng hoạt động</a
                           >
                           <% } %>
@@ -184,27 +187,15 @@
           </div>
         </div>
 
-        <form
-          action="<%= prefixAdmin %>/categories"
-          method="POST"
-          class="d-none"
-          form-change-status
-        ></form>
-
-        <form
-          action="<%= prefixAdmin %>/categories"
-          method="POST"
-          class="d-none"
-          form-delete
-        ></form>
-
         <div class="container-fluid">
           <div class="row">
             <div class="col-lg-9 col-md-9 col-12">
               <%-include("../../partials/pagination.view.ejs") %>
             </div>
             <div class="col-lg-3 col-md-3 col-12">
-              <a href="<%= prefixAdmin %>/categories/garbage" class="btn btn-primary float-end"
+              <a
+                href="<%= prefixAdmin %>/categories/garbage"
+                class="btn btn-primary w-100 float-end"
                 ><i class="bi bi-trash me-2"></i>Thùng rác</a
               >
             </div>
@@ -214,7 +205,19 @@
       </div>
     </div>
 
+    <form
+      action="<%= prefixAdmin %>/categories"
+      method="POST"
+      class="d-none"
+      form-change-status
+    ></form>
+
+    <form action="<%= prefixAdmin %>/categories" method="POST" class="d-none" form-delete></form>
+
     <!-- Script File -->
+    <script src="/admin/scripts/showAlert.js"></script>
+    <script src="/admin/scripts/sidebarToggle.js"></script>
+    <script src="/admin/scripts/activeSidebarLink.js"></script>
     <script src="/admin/scripts/statusFilter.js"></script>
     <script src="/admin/scripts/pagination.js"></script>
     <script src="/admin/scripts/changeStatus.js"></script>
