--- a/views/admin/pages/role/create.view.ejs
+++ b/views/admin/pages/role/create.view.ejs
@@ -16,8 +16,10 @@
     />
 
     <!-- Style File -->
-    <link rel="stylesheet" href="/setup.css" />
-    <link rel="stylesheet" href="/admin/styles/style.css" />
+    <link rel="stylesheet" href="/admin/setup.css" />
+    <link rel="stylesheet" href="/admin/styles/partials/alert.css" />
+    <link rel="stylesheet" href="/admin/styles/partials/header.css" />
+    <link rel="stylesheet" href="/admin/styles/partials/sider.css" />
   </head>
   <body>
     <%-include("../../partials/header.view.ejs") %>
@@ -27,19 +29,23 @@
       <div class="main">
         <%-include("../../partials/alertMessage.view.ejs") %> <%
         if(roleAuth.permission.includes('role-add')) { %>
-        <h1><%= pageTitle %></h1>
+        <h1 class="heading-font text-primary py-0 text-start"><%= pageTitle %></h1>
         <form action="<%= prefixAdmin %>/roles/create" method="POST" id="form-handle">
           <div class="row">
             <div class="col-12">
               <div class="form-group mb-4">
-                <label for="title">Tên quyền</label>
+                <label for="title" class="fw-bold"
+                  ><span class="text-danger"><b>*</b></span> Tên quyền</label
+                >
                 <input type="text" name="title" id="title" required class="form-control" />
               </div>
             </div>
 
             <div class="col-12">
               <div class="form-group mb-4">
-                <label for="description">Mô tả quyền</label>
+                <label for="description" class="fw-bold"
+                  ><span class="text-danger"><b>*</b></span> Mô tả quyền</label
+                >
                 <textarea
                   name="description"
                   id="description"
@@ -60,6 +66,8 @@
 
     <!-- Script File -->
     <script src="/admin/scripts/showAlert.js"></script>
+    <script src="/admin/scripts/sidebarToggle.js"></script>
+    <script src="/admin/scripts/activeSidebarLink.js"></script>
     <script src="/admin/scripts/toggleAccountInfo.js"></script>
 
     <!-- Script Library & Framwork -->
