--- a/views/admin/partials/categoryFilter.view.ejs
+++ b/views/admin/partials/categoryFilter.view.ejs
@@ -1,5 +1,5 @@
 <form action="" class="d-flex form-category" method="GET">
-  <select name="category" class="form-control me-1" id="category">
+  <select name="category" class="form-control flex-fill me-1" id="category">
     <option value="" disabled>-- Lựa chọn loại mỹ phẩm --</option>
     <option value="makeup">Make up</option>
     <option value="bodycare">Body care</option>
