--- a/views/admin/partials/pagination.view.ejs
+++ b/views/admin/partials/pagination.view.ejs
@@ -1,31 +1,37 @@
-<nav>
+<div class="d-md-block d-flex justify-content-center">
   <ul class="pagination">
     <% if(objPagination.currentPage <= 1) {%>
     <li class="page-item disabled">
-      <button class="page-link">Trước</button>
+      <button class="text-primary page-link">Trước</button>
     </li>
     <% } else {%>
     <li class="page-item">
-      <button class="page-link previous">Trước</button>
+      <button class="text-primary page-link previous">Trước</button>
     </li>
     <% } %> <%# End Button Previous %> <% for(let i = 1; i <= objPagination.pageTotal; i++) {%> <%
     if(i == objPagination.currentPage) {%>
     <li class="page-item active" aria-current="page">
-      <button class="page-link" page-number="<%= i %>"><%= i %></button>
+      <button
+        class="page-link"
+        style="background: var(--secondary-color-admin); border-color: var(--secondary-color-admin)"
+        page-number="<%= i %>"
+      >
+        <%= i %>
+      </button>
     </li>
     <% } else {%>
     <li class="page-item">
-      <button class="page-link" page-number="<%= i %>" href="#"><%= i %></button>
+      <button class="text-primary page-link" page-number="<%= i %>" href="#"><%= i %></button>
     </li>
     <% } %> <% } %> <%# End Button Number %> <% if(objPagination.currentPage >=
     objPagination.pageTotal) {%>
     <li class="page-item disabled">
-      <button class="page-link" href="#">Sau</button>
+      <button class="text-primary page-link" href="#">Sau</button>
     </li>
     <% } else {%>
     <li class="page-item">
-      <button class="page-link next" href="#">Sau</button>
+      <button class="text-primary page-link next" href="#">Sau</button>
     </li>
     <% } %> <%# End Button Next %>
   </ul>
-</nav>
+</div>
