--- a/views/admin/partials/statusFilter.view.ejs
+++ b/views/admin/partials/statusFilter.view.ejs
@@ -1,8 +1,10 @@
-<% activeStatus.forEach(btnActive => { %>
-<button
-  class="btn btn-outline-primary btn-sm ml-1 mb-1 <%= btnActive.class %>"
-  btn-status-filter="<%= btnActive.status %>"
->
-  <%= btnActive.name %>
-</button>
-<% }) %>
+<div class="d-flex justify-content-start column-gap-2">
+  <% activeStatus.forEach(btnActive => { %>
+  <button
+    class="btn btn-outline-primary btn-sm flex-grow-1 <%= btnActive.class %>"
+    btn-status-filter="<%= btnActive.status %>"
+  >
+    <%= btnActive.name %>
+  </button>
+  <% }) %>
+</div>
